--- a/src/portal/src/i18n/lang/zh-cn-lang.json
+++ b/src/portal/src/i18n/lang/zh-cn-lang.json
@@ -693,6 +693,7 @@
             "COLUMN_ID": "缺陷码",
             "COLUMN_SEVERITY": "严重度",
             "COLUMN_PACKAGE": "组件",
+            "COLUMN_PACKAGES": "组件",
             "COLUMN_VERSION": "当前版本",
             "COLUMN_FIXED": "修复版本",
             "COLUMN_DESCRIPTION": "简介",
@@ -738,6 +739,8 @@
         "DOCKER_VERSION": "Docker版本",
         "ARCHITECTURE": "架构",
         "OS": "操作系统",
+        "HAVE": "存在",
+        "HAS": "存在",
         "SCAN_COMPLETION_TIME": "扫描完成时间",
         "IMAGE_VULNERABILITIES": "镜像缺陷",
         "LEVEL_VULNERABILITIES": "缺陷等级",
