--- a/src/portal/src/i18n/lang/es-es-lang.json
+++ b/src/portal/src/i18n/lang/es-es-lang.json
@@ -694,6 +694,7 @@
             "COLUMN_ID": "Vulnerability",
             "COLUMN_SEVERITY": "Severity",
             "COLUMN_PACKAGE": "Package",
+            "COLUMN_PACKAGES": "Packages",
             "COLUMN_VERSION": "Current version",
             "COLUMN_FIXED": "Fixed in version",
             "COLUMN_DESCRIPTION": "Description",
@@ -739,6 +740,8 @@
         "DOCKER_VERSION": "Docker Version",
         "ARCHITECTURE": "Architecture",
         "OS": "OS",
+        "HAVE": "have",
+        "HAS": "has",
         "SCAN_COMPLETION_TIME": "Scan Completed",
         "IMAGE_VULNERABILITIES": "Image Vulnerabilities",
         "LEVEL_VULNERABILITIES": "Level Vulnerabilities",
